--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Airbnb Cereal";
+  src: url("../public/fonts/AirbnbCereal_W_Md.otf");
+}
+
+body {
+  font-family: "Airbnb Cereal", "Inter", Arial, sans-serif;
+}
